# GnuCashier

./: .dockerignore  .gitignore  Dockerfile  README.md  broker-import.ipynb  gnucashier-docker.sh  gnucashier.example.toml  pyproject.toml
books/: test-nota.gnucash  test-ta.gnucash
books.orig/: export.xac  test-empty.gnucash  test-ta.gnucash
docs/: DESIGN.md
gnucashier/: __init__.py  backfill.py  bookindex.py  brokers.py  cli.py  config.py  importer.py  loader.py  model.py  planner.py  report.py  validate.py  xac.py
gnucashier/parsers/: alfa.py
