[project]
name = "gnucashier"
version = "0.1.0"
description = "Ring transactions into GnuCash from many sources (GnuCash exports, broker reports, ...)"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "python-calamine>=0.7.0",
    "typer>=0.12",
]
# The GnuCash Python bindings (python3-gnucash) are not on PyPI; install them
# from your distro or use the Docker image. Needed for import/backfill/import-xac.

[project.scripts]
gnucashier = "gnucashier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gnucashier"]
